samba (2:3.4.0-4) UNRELEASED; urgency=low

  * debian/samba.pamd: include common-session-noninteractive instead of
    common-session, to avoid pulling in modules specific to interactive
    logins such as pam_ck_connector.
  * debian/control: samba depends on libpam-runtime (>= 1.0.1-11) for the
    above.
  * rename debian/samba.pamd to debian/samba.pam and call dh_installpam
    from debian/rules install, bringing us a smidge closer to a stock
    debhelper build
  * don't call pyversions from debian/rules, this throws a useless error
    message during build.
  * fix up the list of files that need to be removed by hand in the clean
    target; the majority of these are now correctly handled upstream.
  * debian/rules: fix the update-arch target for the case of unversioned
    build-deps.
  * Pull avr32 into the list of supported Linux archs.  Closes: #543543.
  * Fix LSB header in winbind.init; thanks to Petter Reinholdtsen for the
    patch. Closes: #541367.

 -- Steve Langasek <vorlon@debian.org>  Sun, 23 Aug 2009 22:35:16 -0700

samba (2:3.4.0-3) unstable; urgency=low

  [ Steve Langasek ]
  * debian/control: samba-common-bin has no reason to depend on
    libpam-modules.

  [ Christian Perrier ]
  * Fix "invalid argument" when trying to copy a file from smb share
    Use an upstream patch that will be included in 3.4.1
    Closes: #536757

 -- Christian Perrier <bubulle@debian.org>  Fri, 21 Aug 2009 11:08:43 +0200

samba (2:3.4.0-2) unstable; urgency=low

  [ Debconf translations ]
  * German. Closes: #536433

  [ Steve Langasek ]
  * Enable the ldap idmap module; thanks to Aaron J. Zirbes.  Closes: #536786.

  [ Jelmer Vernooij ]
  * Properly rename smbstatus.1 for alternatives. Closes: #534772

 -- Christian Perrier <bubulle@debian.org>  Sun, 02 Aug 2009 12:20:51 +0200

samba (2:3.4.0-1) unstable; urgency=low

  [ Christian Perrier ]
  * New upstream release: first upload to unstable for 3.4
  * Correct dependencies for samba-common-bin. Closes: #534595
